# Summer-2021---studying-ROS2-OpenAi-Gym

./: README.md
learning_rl/: dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index  virtual_enviroment_info.md
learning_rl/array-escape/: array_escape_dqn_v1.py  array_escape_dqn_v2.py  dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index  setup.py  test_agent.py
learning_rl/array-escape/array_escape/: __init__.py
learning_rl/array-escape/array_escape/envs/: __init__.py  array_escape_env.py  array_escape_env_v1.py  array_escape_env_v2.py
learning_rl/array-escape/array_escape/weights/10_gird_120_160/: dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index
learning_rl/array-escape/array_escape/weights/10_grid_60_80/: dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index
learning_rl/array-escape/array_escape/weights/10_grid_60_80_3_mil/: dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index
learning_rl/cartpole/Nicholas-Renotte-Tutorial/: dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index  first_cartpole.py  model_with_weights.py
learning_rl/cartpole/my_cartpole/: cartpole_v2.py  cartpole_v3.py  cartpole_v4.py  cartpole_v5.py  cartpole_v6.py  dqn_weights.h5f.data-00000-of-00001  dqn_weights.h5f.index  test.py
learning_ros2/: CMakeLists.txt  package.xml
learning_ros2/launch/: go_to_goal_tf.py
learning_ros2/src/: cpp_node.cpp
learning_ros2/src/turtlesim/: go_to_goal_turtle.cpp  go_to_goal_turtle_tf.cpp  tf_broadcaster.cpp
